--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 
+
+
 body {margin:0;
     background-repeat: no-repeat;
     background-color:#376ad3;
@@ -146,6 +148,18 @@ a:visited{
     transition: background-color 0.6s ease;
   }
 
+/* The dots/bullets/indicators */
+.dot3 {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
   .active, .dot:hover {
     background-color: #717171;
   }
@@ -154,6 +168,10 @@ a:visited{
     background-color: #717171;
   }
   
+  .active, .dot3:hover {
+    background-color: #717171;
+  }
+
   /* Fading animation */
   .fade {
     -webkit-animation-name: fade;
